[package]
name = "bloomy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = "0.10.6"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
bloomfilter = "1"

[[bench]]
name = "bloom_benchmark"
harness = false

[[bench]]
name = "other_crate_compare_benchmark"
harness = false
