[package]
name = "bloomy"
description = "fast bloom filter implementation with thorough documentation and tests"
readme = "README.md"
repository = "https://github.com/rauljordan/bloomy"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["data-structures", "bloom"]
categories = ["data-structures"]

[dependencies]
sha3 = "0.10.6"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
bloomfilter = "1"

[[bench]]
name = "bloom_benchmark"
harness = false

[[bench]]
name = "other_crate_compare_benchmark"
harness = false
